responsive grid layout in all passwords page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -244,6 +244,7 @@ body {
   }
 
   .grid {
+    margin: 0 auto ;
     grid-template-columns: 1fr;
     margin-bottom: 120px;
     max-width: 320px;
